@@ -48,9 +48,9 @@ Provides: www-browser,
 	iceweasel,
 	gnome-www-browser,
 	${app:Provides}
-Suggests: @MOZ_APP_NAME@-gnome-support | firefox-kde-support,
-	latex-xft-fonts,
-	libthai0
+Suggests: latex-xft-fonts,
+	libthai0,
+	${app:Suggests}
 Breaks: ${app:Breaks}
 Replaces: ${app:Replaces}
 Conflicts: ${app:Conflicts}
@@ -67,7 +67,6 @@ Depends: ${shlibs:Depends},
 	${misc:Depends}, 
 	@MOZ_APP_NAME@
 Provides: ${gs:Provides}
-Breaks: ${gs:Breaks}
 Replaces: ${gs:Replaces}
 Conflicts: ${gs:Conflicts}
 Description: Safe and easy web browser from Mozilla - GNOME support
@@ -87,7 +86,6 @@ Depends: ${shlibs:Depends},
 	@MOZ_APP_NAME@ (= ${binary:Version})
 Provides: ${dbg:Provides}
 Replaces: ${dbg:Replaces}
-Breaks: ${dbg:Breaks}
 Conflicts: ${dbg:Conflicts}
 Description: Safe and easy web browser from Mozilla - debug symbols
  Firefox delivers safe, easy web browsing. A familiar user interface,
@@ -112,7 +110,6 @@ Conflicts: xulrunner-2.0-dev,
 	xulrunner-1.9.2-dev,
 	${dev:Conflicts}
 Replaces: ${dev:Replaces}
-Breaks: ${dev:Breaks}
 Description: Safe and easy web browser from Mozilla - development files
  Firefox delivers safe, easy web browsing. A familiar user interface,
  enhanced security features including protection from online identity theft,
