@@ -56,7 +56,11 @@ firefox-trunk (11.0~a1~hg20111208r82182-0ubuntu2) UNRELEASED; urgency=low
     builds, but the Feedback button is disabled on release builds
     - update debian/firefox.install.in
   * Update mozilla-kde.patch and firefox-kde.patch to remove the use of
-    nsCStringArray, which was dropped from Firefox 10 
+    nsCStringArray, which was dropped from Firefox 10
+  * Drop the firefox-kde-support suggest whilst the KDE patches aren't
+    applied. Also facilitate adding his suggest only on oneiric and older
+    - update debian/rules
+    - update debian/control{,.in}
 
   [ Adam Conrad <adconrad@ubuntu.com> ]
   * Add missing build-dep on non-essential locales, since we use it.
@@ -66,7 +70,7 @@ firefox-trunk (11.0~a1~hg20111208r82182-0ubuntu2) UNRELEASED; urgency=low
   * debian/usr.bin.firefox.apparmor.12.04: don't use @{MOZ_LIBDIR} variable
     for the binary names
 
- -- Chris Coulson <chris.coulson@canonical.com>  Wed, 21 Dec 2011 13:21:45 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Wed, 21 Dec 2011 13:38:56 +0000
 
 firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu1) oneiric; urgency=low
 
